fix: move time bucket into asset controller
